// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms Rank Bars 1`] = `
Array [
  .c0 {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 2px;
}

<img
    alt=""
    className="c0"
    height={20}
    size={20}
    src="https://s3.amazonaws.com/uifaces/faces/twitter/xravil/128.jpg"
    width={20}
  />,
  .c0 {
  margin-right: 16px;
}

<span
    className="c0"
  >
    port
  </span>,
  .c1 {
  width: 43%;
  background-color: #28a745;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  background-color: #e1e4e8;
  border-radius: 3px;
  height: 8px;
}

<span
    className="c0"
  >
    <span
      className="c1"
    />
  </span>,
]
`;

exports[`Storyshots molecules Admires 1`] = `
.c3 {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 2px;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  width: 100%;
}

.c9 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c7 {
  margin-top: 0.5rem;
  position: relative;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #eb2e3e;
  height: 0.063rem;
  width: 100%;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c8::-webkit-slider-thumb {
  background-color: #fff;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c8::-ms-tooltip {
  display: none;
}

.c8::-ms-tooltip {
  display: none;
}

.c8::-moz-focus-outer {
  border: 0;
}

.c8::-moz-range-track {
  height: 0;
}

.c8::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  width: 1.563rem;
  height: 1.563rem;
  border: 0.063rem solid #eb2e3e;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.25rem;
}

.c1 > * {
  width: 50%;
}

.c1 + .c0 {
  border-top: 1px solid #ccc;
}

.c1 img {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 0.625rem;
}

.c1 p {
  font-size: 0.875rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className=""
>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
    >
      <img
        alt=""
        className="c3"
        height={20}
        size={20}
        src="https://s3.amazonaws.com/uifaces/faces/twitter/giancarlon/128.jpg"
        width={20}
      />
      <span
        className=""
      >
        Rufiyaa
      </span>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <p>
            monitor
          </p>
          <p>
            Berkshire
          </p>
        </div>
        <div
          className="c7"
        >
          <input
            className="c8"
            step="25"
            type="range"
          />
          <span
            className="c9"
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
    >
      <img
        alt=""
        className="c3"
        height={20}
        size={20}
        src="https://s3.amazonaws.com/uifaces/faces/twitter/nvkznemo/128.jpg"
        width={20}
      />
      <span
        className=""
      >
        Administrator
      </span>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <p>
            Metical
          </p>
          <p>
            Crossing
          </p>
        </div>
        <div
          className="c7"
        >
          <input
            className="c8"
            step="25"
            type="range"
          />
          <span
            className="c9"
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
    >
      <img
        alt=""
        className="c3"
        height={20}
        size={20}
        src="https://s3.amazonaws.com/uifaces/faces/twitter/BroumiYoussef/128.jpg"
        width={20}
      />
      <span
        className=""
      >
        harness
      </span>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <p>
            Credit Card Account
          </p>
          <p>
            help-desk
          </p>
        </div>
        <div
          className="c7"
        >
          <input
            className="c8"
            step="25"
            type="range"
          />
          <span
            className="c9"
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
    >
      <img
        alt=""
        className="c3"
        height={20}
        size={20}
        src="https://s3.amazonaws.com/uifaces/faces/twitter/namankreative/128.jpg"
        width={20}
      />
      <span
        className=""
      >
        Handcrafted Cotton Soap
      </span>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <p>
            alarm
          </p>
          <p>
            Table
          </p>
        </div>
        <div
          className="c7"
        >
          <input
            className="c8"
            step="25"
            type="range"
          />
          <span
            className="c9"
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules Heros 1`] = `
.c0 {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 2px;
}

<div
  className=""
>
  <img
    alt=""
    className="c0"
    height={20}
    size={20}
    src="https://s3.amazonaws.com/uifaces/faces/twitter/kurtinc/128.jpg"
    width={20}
  />
  <span
    className=""
  >
    Awesome
  </span>
</div>
`;

exports[`Storyshots molecules Range Input 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 100%;
}

.c5 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c3 {
  margin-top: 0.5rem;
  position: relative;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #eb2e3e;
  height: 0.063rem;
  width: 100%;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c4::-webkit-slider-thumb {
  background-color: #fff;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c4::-ms-tooltip {
  display: none;
}

.c4::-ms-tooltip {
  display: none;
}

.c4::-moz-focus-outer {
  border: 0;
}

.c4::-moz-range-track {
  height: 0;
}

.c4::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  width: 1.563rem;
  height: 1.563rem;
  border: 0.063rem solid #eb2e3e;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p>
        solution
      </p>
      <p>
        Buckinghamshire
      </p>
    </div>
    <div
      className="c3"
    >
      <input
        className="c4"
        step="25"
        type="range"
      />
      <span
        className="c5"
        style={
          Object {
            "left": "50%",
          }
        }
      >
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules Ranges 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 100%;
}

.c3 {
  position: relative;
  border-bottom: 0.063rem solid #eb2e3e;
  margin-top: 1.25rem;
  width: 100%;
  height: 0.063rem;
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  top: 50%;
  background-color: #fff;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 2;
  box-sizing: border-box;
}

.c5 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p>
        firewall
      </p>
      <p>
        e-commerce
      </p>
    </div>
    <div
      className="c3"
    >
      <div
        className="c4"
        style={
          Object {
            "left": "50%",
          }
        }
      />
      <span
        className="c5"
        style={
          Object {
            "left": "50%",
          }
        }
      >
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules Ranks 1`] = `
.c5 {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 2px;
}

.c6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  width: 100%;
}

.c11 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c9 {
  margin-top: 0.5rem;
  position: relative;
}

.c10 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #eb2e3e;
  height: 0.063rem;
  width: 100%;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c10::-webkit-slider-thumb {
  background-color: #fff;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c10::-ms-tooltip {
  display: none;
}

.c10::-ms-tooltip {
  display: none;
}

.c10::-moz-focus-outer {
  border: 0;
}

.c10::-moz-range-track {
  height: 0;
}

.c10::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  width: 1.563rem;
  height: 1.563rem;
  border: 0.063rem solid #eb2e3e;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.25rem;
}

.c3 > * {
  width: 50%;
}

.c3 + .c2 {
  border-top: 1px solid #ccc;
}

.c3 img {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 0.625rem;
}

.c3 p {
  font-size: 0.875rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 span {
  font-weight: bold;
  margin-right: 1.875rem;
}

.c1 + .c0 {
  margin-top: 1rem;
}

<div
  className="c0 c1"
>
  <span>
    74029
  </span>
  <div
    className="c2 c3"
  >
    <div
      className="c4"
    >
      <img
        alt=""
        className="c5"
        height={20}
        size={20}
        src="https://s3.amazonaws.com/uifaces/faces/twitter/kianoshp/128.jpg"
        width={20}
      />
      <span
        className=""
      >
        synergistic
      </span>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <p>
            e-services
          </p>
          <p>
            withdrawal
          </p>
        </div>
        <div
          className="c9"
        >
          <input
            className="c10"
            step="25"
            type="range"
          />
          <span
            className="c11"
            style={
              Object {
                "left": "50%",
              }
            }
          >
            3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules Results 1`] = `
Array [
  .c0 {
  margin: 0 auto;
  color: #3fa2fc;
  font-size: 1.563rem;
  font-weight: bold;
  width: 5rem;
  height: 5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0.188rem solid #3fa2fc;
  border-radius: 50%;
}

.c1 {
  text-align: center;
}

.c1 span {
  display: block;
  font-size: 0.625rem;
  font-weight: normal;
  margin-bottom: 0.313rem;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <span>
        50人中
      </span>
      10位
    </div>
  </div>,
  .c0 {
  margin-top: 0.938rem;
  font-size: 0.875rem;
  line-height: 1.4;
}

<p
    className="c0"
  >
    architect
  </p>,
]
`;

exports[`Storyshots pages Admire Page 1`] = `
.c6 {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 2px;
}

.c13 {
  position: relative;
  display: inline-block;
  padding: 6px 12px;
  color: #24292e;
  background-color: #f6f8fa;
  background-image: linear-gradient(-180deg,#fafbfc 0%,rgb(239,243,246) 90%);
  font-size: 14px;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-repeat: repeat-x;
  background-position: -1px -1px;
  background-size: 110% 110%;
  border: 1px solid rgba(27,31,35,0.2);
  border-radius: 0.25em;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
}

.c13:hover {
  background-color: rgb(230,235,241);
  background-image: linear-gradient(-180deg,rgb(239,243,246) 0%,rgb(230,235,241) 90%);
  background-position: -0.5em center;
  border-color: rgba(27,31,35,0.35);
  -webkit-text-decoration: none;
  text-decoration: none;
  background-repeat: repeat-x;
}

.c13:active {
  background-color: rgb(233,236,239);
  background-image: none;
  box-shadow: rgba(27,31,35,0.15) 0px 0.15em 0.3em inset;
  border-color: rgba(27,31,35,0.2);
}

.c13:focus {
  outline: none;
  box-shadow: rgba(3,102,214,0.3) 0px 0px 0px 0.2em;
}

.c13.grouped {
  position: relative;
  border-right-width: 0;
  border-radius: 0;
}

.c13.grouped:first-child {
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c13.grouped:last-child {
  border-right-width: 1px;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
}

.c13.grouped:focus,
.c13.grouped:active,
.c13.grouped:hover {
  border-right-width: 1px;
}

.c13.grouped:focus + .grouped,
.c13.grouped:active + .grouped,
.c13.grouped:hover + .grouped {
  border-left-width: 0;
}

.c13:focus,
.c13:active {
  z-index: 1;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  text-align: center;
  background-color: #000;
  width: 40px;
}

.c1 li a {
  color: #fff;
  display: block;
  padding: 0.7rem;
}

.c1 li a:hover,
.c1 li a.active {
  background-color: #3ebdaa;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  width: 100%;
}

.c12 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c10 {
  margin-top: 0.5rem;
  position: relative;
}

.c11 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #eb2e3e;
  height: 0.063rem;
  width: 100%;
  margin: 0;
  padding: 0;
  cursor: pointer;
}

.c11::-webkit-slider-thumb {
  background-color: #fff;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c11::-ms-tooltip {
  display: none;
}

.c11::-ms-tooltip {
  display: none;
}

.c11::-moz-focus-outer {
  border: 0;
}

.c11::-moz-range-track {
  height: 0;
}

.c11::-moz-range-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  width: 1.563rem;
  height: 1.563rem;
  border: 0.063rem solid #eb2e3e;
  border-radius: 50%;
  position: relative;
  z-index: 2;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f9f9f9;
  min-height: 100%;
  height: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.25rem;
}

.c4 > * {
  width: 50%;
}

.c4 + .c3 {
  border-top: 1px solid #ccc;
}

.c4 img {
  width: 2.5rem;
  height: 2.5rem;
  margin-right: 0.625rem;
}

.c4 p {
  font-size: 0.875rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (max-width:48rem) {
  .c2 {
    display: block;
  }
}

@media (max-width:48rem) {
  .c1 {
    width: 100%;
  }

  .c1 ul {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:48rem) {
  .c0 {
    display: block;
  }
}

<div
  className="c0"
>
  <nav
    className="c1"
  >
    <ul>
      <li>
        <a
          className="active"
          href="#"
        >
          <svg
            aria-hidden="true"
            className="octicon"
            height={16}
            role="img"
            style={
              Object {
                "display": "inline-block",
                "fill": "currentColor",
                "userSelect": "none",
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 12 16"
            width={12}
          >
            <path
              d="M12 14.002a.998.998 0 01-.998.998H1.001A1 1 0 010 13.999V13c0-2.633 4-4 4-4s.229-.409 0-1c-.841-.62-.944-1.59-1-4 .173-2.413 1.867-3 3-3s2.827.586 3 3c-.056 2.41-.159 3.38-1 4-.229.59 0 1 0 1s4 1.367 4 4v1.002z"
              fillRule="evenodd"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          <svg
            aria-hidden="true"
            className="octicon"
            height={16}
            role="img"
            style={
              Object {
                "display": "inline-block",
                "fill": "currentColor",
                "userSelect": "none",
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 14 16"
            width={14}
          >
            <path
              d="M0 12v3h3l8-8-3-3-8 8zm3 2H1v-2h1v1h1v1zm10.3-9.3L12 6 9 3l1.3-1.3a.996.996 0 011.41 0l1.59 1.59c.39.39.39 1.02 0 1.41z"
              fillRule="evenodd"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
  <main
    className="c2"
  >
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className="c3 c4"
        >
          <div
            className="c5"
          >
            <img
              alt=""
              className="c6"
              height={20}
              size={20}
              src="https://s3.amazonaws.com/uifaces/faces/twitter/nemanjaivanovic/128.jpg"
              width={20}
            />
            <span
              className=""
            >
              zero defect
            </span>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                <p>
                  invoice
                </p>
                <p>
                  Licensed
                </p>
              </div>
              <div
                className="c10"
              >
                <input
                  className="c11"
                  step="25"
                  type="range"
                />
                <span
                  className="c12"
                  style={
                    Object {
                      "left": "50%",
                    }
                  }
                >
                  3
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c3 c4"
        >
          <div
            className="c5"
          >
            <img
              alt=""
              className="c6"
              height={20}
              size={20}
              src="https://s3.amazonaws.com/uifaces/faces/twitter/lepinski/128.jpg"
              width={20}
            />
            <span
              className=""
            >
              Grocery
            </span>
          </div>
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <div
                className="c9"
              >
                <p>
                  Shoes
                </p>
                <p>
                  Table
                </p>
              </div>
              <div
                className="c10"
              >
                <input
                  className="c11"
                  step="25"
                  type="range"
                />
                <span
                  className="c12"
                  style={
                    Object {
                      "left": "50%",
                    }
                  }
                >
                  3
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="c13"
      >
        Incredible
      </button>
    </div>
  </main>
</div>
`;

exports[`Storyshots pages Mypage 1`] = `
.c3 {
  padding: 24px;
  margin-top: 8px;
}

.c4 {
  display: inline-block;
  overflow: hidden;
  line-height: 1;
  vertical-align: middle;
  border-radius: 2px;
}

.c15 {
  width: 100%;
  background-color: #28a745;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  background-color: #e1e4e8;
  border-radius: 3px;
  height: 8px;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  text-align: center;
  background-color: #000;
  width: 40px;
}

.c1 li a {
  color: #fff;
  display: block;
  padding: 0.7rem;
}

.c1 li a:hover,
.c1 li a.active {
  background-color: #3ebdaa;
}

.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  width: 100%;
}

.c8 {
  position: relative;
  border-bottom: 0.063rem solid #eb2e3e;
  margin-top: 1.25rem;
  width: 100%;
  height: 0.063rem;
  box-sizing: border-box;
}

.c9 {
  position: absolute;
  border: 0.063rem solid #eb2e3e;
  width: 1.563rem;
  height: 1.563rem;
  border-radius: 50%;
  top: 50%;
  background-color: #fff;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 2;
  box-sizing: border-box;
}

.c10 {
  position: absolute;
  top: 85%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 3;
  font-size: 0.75rem;
  color: #777;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-size: 0.75rem;
  color: #555;
}

.c13 {
  margin-top: 0.938rem;
  font-size: 0.875rem;
  line-height: 1.4;
}

.c11 {
  margin: 0 auto;
  color: #3fa2fc;
  font-size: 1.563rem;
  font-weight: bold;
  width: 5rem;
  height: 5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0.188rem solid #3fa2fc;
  border-radius: 50%;
}

.c12 {
  text-align: center;
}

.c12 span {
  display: block;
  font-size: 0.625rem;
  font-weight: normal;
  margin-bottom: 0.313rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f9f9f9;
  min-height: 100%;
  height: 100%;
}

@media (max-width:48rem) {
  .c2 {
    display: block;
  }
}

@media (max-width:48rem) {
  .c1 {
    width: 100%;
  }

  .c1 ul {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (max-width:48rem) {
  .c0 {
    display: block;
  }
}

<div
  className="c0"
>
  <nav
    className="c1"
  >
    <ul>
      <li>
        <a
          className="active"
          href="#"
        >
          <svg
            aria-hidden="true"
            className="octicon"
            height={16}
            role="img"
            style={
              Object {
                "display": "inline-block",
                "fill": "currentColor",
                "userSelect": "none",
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 12 16"
            width={12}
          >
            <path
              d="M12 14.002a.998.998 0 01-.998.998H1.001A1 1 0 010 13.999V13c0-2.633 4-4 4-4s.229-.409 0-1c-.841-.62-.944-1.59-1-4 .173-2.413 1.867-3 3-3s2.827.586 3 3c-.056 2.41-.159 3.38-1 4-.229.59 0 1 0 1s4 1.367 4 4v1.002z"
              fillRule="evenodd"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          <svg
            aria-hidden="true"
            className="octicon"
            height={16}
            role="img"
            style={
              Object {
                "display": "inline-block",
                "fill": "currentColor",
                "userSelect": "none",
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 14 16"
            width={14}
          >
            <path
              d="M0 12v3h3l8-8-3-3-8 8zm3 2H1v-2h1v1h1v1zm10.3-9.3L12 6 9 3l1.3-1.3a.996.996 0 011.41 0l1.59 1.59c.39.39.39 1.02 0 1.41z"
              fillRule="evenodd"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
  <main
    className="c2"
  >
    <div
      className="c3"
    >
      <img
        alt=""
        className="c4"
        height={20}
        size={20}
        src="https://s3.amazonaws.com/uifaces/faces/twitter/apriendeau/128.jpg"
        width={20}
      />
      <span
        className=""
      >
        deliverables
      </span>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              className="c7"
            >
              <p>
                とても悪い
              </p>
              <p>
                とても良い
              </p>
            </div>
            <div
              className="c8"
            >
              <div
                className="c9"
                style={
                  Object {
                    "left": "50%",
                  }
                }
              />
              <span
                className="c10"
                style={
                  Object {
                    "left": "50%",
                  }
                }
              >
                3
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className=""
      >
        <div
          className="c11"
        >
          <div
            className="c12"
          >
            <span>
              50人中
            </span>
            10位
          </div>
        </div>
        <p
          className="c13"
        >
          International
        </p>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className=""
      >
        <img
          alt=""
          className="c4"
          height={20}
          size={20}
          src="https://s3.amazonaws.com/uifaces/faces/twitter/ccinojasso1/128.jpg"
          width={20}
        />
        <span
          className=""
        >
          Borders
        </span>
        <span
          className="c14"
        >
          <span
            className="c15"
          />
        </span>
      </div>
      <div
        className=""
      >
        <img
          alt=""
          className="c4"
          height={20}
          size={20}
          src="https://s3.amazonaws.com/uifaces/faces/twitter/nitinhayaran/128.jpg"
          width={20}
        />
        <span
          className=""
        >
          Home Loan Account
        </span>
        <span
          className="c14"
        >
          <span
            className="c15"
          />
        </span>
      </div>
    </div>
  </main>
</div>
`;

exports[`Storyshots templates Sign In 1`] = `
.c0 {
  background: #3ebdaa;
  background: linear-gradient( 90deg, rgba(62,189,170,0.6), rgba(63,162,252,0.6) );
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  background-color: #fff;
  padding: 3rem;
  width: 24rem;
  box-sizing: border-box;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.1);
}

.c1 button {
  margin-top: 3.75rem;
  width: 100%;
}

<div
  className="c0"
>
  <main
    className="c1"
  />
</div>
`;

exports[`Storyshots templates Sign In Default 1`] = `
.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  text-align: center;
  background-color: #000;
  width: 40px;
}

.c1 li a {
  color: #fff;
  display: block;
  padding: 0.7rem;
}

.c1 li a:hover,
.c1 li a.active {
  background-color: #3ebdaa;
}

.c0 {
  background: #3ebdaa;
  background: linear-gradient( 90deg, rgba(62,189,170,0.6), rgba(63,162,252,0.6) );
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (max-width:48rem) {
  .c2 {
    display: block;
  }
}

@media (max-width:48rem) {
  .c1 {
    width: 100%;
  }

  .c1 ul {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<div
  className="c0"
>
  <nav
    className="c1"
  >
    <ul>
      <li>
        <a
          className="active"
          href="#"
        >
          <svg
            aria-hidden="true"
            className="octicon"
            height={16}
            role="img"
            style={
              Object {
                "display": "inline-block",
                "fill": "currentColor",
                "userSelect": "none",
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 12 16"
            width={12}
          >
            <path
              d="M12 14.002a.998.998 0 01-.998.998H1.001A1 1 0 010 13.999V13c0-2.633 4-4 4-4s.229-.409 0-1c-.841-.62-.944-1.59-1-4 .173-2.413 1.867-3 3-3s2.827.586 3 3c-.056 2.41-.159 3.38-1 4-.229.59 0 1 0 1s4 1.367 4 4v1.002z"
              fillRule="evenodd"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          href="#"
        >
          <svg
            aria-hidden="true"
            className="octicon"
            height={16}
            role="img"
            style={
              Object {
                "display": "inline-block",
                "fill": "currentColor",
                "userSelect": "none",
                "verticalAlign": "text-bottom",
              }
            }
            viewBox="0 0 14 16"
            width={14}
          >
            <path
              d="M0 12v3h3l8-8-3-3-8 8zm3 2H1v-2h1v1h1v1zm10.3-9.3L12 6 9 3l1.3-1.3a.996.996 0 011.41 0l1.59 1.59c.39.39.39 1.02 0 1.41z"
              fillRule="evenodd"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
  <main
    className="c2"
  />
</div>
`;
